[FIX] UI improvements to the advanced settings page -Websocket secure checkbox aligned -All the text for edit websocket server now aligned -Added port number label

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -1628,6 +1628,18 @@
     padding-top: 20px;
   }
 
+  #websocket{
+    padding-right: 0px;
+  }
+
+  #port{
+    padding-left: 0px;
+  }
+
+  #portNumber{
+    padding-left: 15px;
+  }
+
   div.section {
     padding-bottom: 20px;
   }
@@ -1685,11 +1697,20 @@
   #secureSocket {
     padding-left: 0px;
     padding-right: 0px;
+
+
+    .helperInput {
+      padding-top: 7px;
+    }
   }
 
   #renameForm {
     padding-left: 15px;
 
+  }
+
+  #editButton {
+    padding-top: 4px;
   }
 }
 
